unpackaged/main/default/objects/Formula_Update_Settings__mdt/Formula_Update_Settings__mdt.object-meta.xml
<CustomObject>
    <description>This is used to determine which formula fields on which objects should be checked for changes. If a change happens this setting controls which field is updated. This is used to ensure that a formula field change will trigger a record update which in turn will force the record to be sent to the MobleCaddy app.</description>
    <label>Formula Update Settings</label>
    <pluralLabel>Formula Update Settings</pluralLabel>
</CustomObject>