unpackaged/main/default/objects/Formula_Update_Settings__mdt/fields/Comparison_Field__c.field-meta.xml
<CustomField>
    <fullName>Comparison_Field__c</fullName>
    <description>This is a boolean field that indicates if the formula has changed</description>
    <label>Comparison Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>