unpackaged/main/default/objects/Formula_Update_Settings__mdt/fields/Copy_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Copy_Field_Name__c</fullName>
    <description>This is the API name of the field that will store a copy of the formula and will be compared with the formula value.</description>
    <label>Copy Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>