unpackaged/main/default/objects/Formula_Update_Settings__mdt/fields/Formula_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Formula_Field_Name__c</fullName>
    <description>This is the API name of the formula field that will be checked</description>
    <label>Formula Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>