unpackaged/main/default/objects/Formula_Update_Settings__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>This is the name of the object that this setting refers to</description>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>